--- a/front/src/main/webapp/alerts.html
+++ b/front/src/main/webapp/alerts.html
@@ -20,7 +20,7 @@
   <body>
     <div class="main-wrapper">
       <header class="main-header">
-        <div class="main-logo"><a href="index.html">site</a></div>
+        <div class="main-logo"><a href="dashboard.html">site</a></div>
       </header>
       <label for="activate-menu" class="btn-alpha btn-activate-menu"><i class="fa fa-bars"></i>Menú</label>
       <label for="activate-notification" class="btn-alpha btn-activate-notification"><i class="fa fa-bell-o"></i>Alertas<span class="count">2</span></label>
@@ -28,12 +28,11 @@
       <input type="checkbox" id="activate-notification" class="activate-notification">
       <nav class="main-nav">
         <ul class="nav-listing">
-          <li><a href="index.html"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
-          <li><a href="actualidad.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
+          <li><a href="dashboard.html"><span class="icon"></span><span class="tag">Dashboard de inicio</span></a></li>
+          <li><a href="news.html"><span class="icon"></span><span class="tag">Actualidad de la industria</span></a></li>
           <li><a href="question.html"><span class="icon"></span><span class="tag">Perfil</span></a></li>
           <li class="selected"><a href="alerts.html"><span class="icon"></span><span class="tag">Alertas y notifiaciones</span></a></li>
           <li><a href="ic.html"><span class="icon"></span><span class="tag">Inteligencia comercial</span></a></li>
-          <li><a href="#"><span class="icon"></span><span class="tag">Inteligencia social</span></a></li>
         </ul>
       </nav>
       <section class="main-container">
