--- a/front/src/main/webapp/view-new.html
+++ b/front/src/main/webapp/view-new.html
@@ -20,8 +20,8 @@
   <body>
     <div class="main-wrapper">
       <header class="main-header">
-        <div class="main-logo"><a href="index.html">site</a></div>
-      </header><a href="index.html" class="btn-alpha btn-back"><i class="fa fa-chevron-left"></i> Regresar</a>
+        <div class="main-logo"><a href="dashboard.html">site</a></div>
+      </header><a href="dashboard.html" class="btn-alpha btn-back"><i class="fa fa-chevron-left"></i> Regresar</a>
       <div class="iframe-container">
         <iframe width="100%" height="2000px" src="http://www.milenio.com/hidalgo/Revivira-industria-Centro-Nacional-Innovacion_0_220777981.html"></iframe>
       </div>
