--- a/front/src/main/webapp/alerts-view.html
+++ b/front/src/main/webapp/alerts-view.html
@@ -119,7 +119,7 @@
                   <p>Datos de la Dirección de Planeación, Análisis y Proyectos Estratégicos de la Sefoe y cifras preliminares de la Administración General de Aduanas revelan que en 2013 las exportaciones del sector textil y confección sumaron 339 millones 802 mil 984.17 dólares, siendo el segundo con mayor porcentaje de participación en el total de Yucatán, representando el 23.25 por ciento.</p>
                   <p>Las exportaciones provinieron de 52 empresas, y los principales destinos fueron Luxemburgo, Estados Unidos, Macao, Islas Caimán y Canadá; mientras que los productos más demandados fueron trajes, ternos, pantalones, vestidos, filamentos sintéticos o artificiales, guata, fieltro y tela no tejida.</p>
                 </div>
-                <div class="action"><a href="#" class="btn">Solicitar más información <i class="fa fa-chevron-right"></i></a></div>
+                <div class="action"><a href="#alert-contact" class="lb-alert-contact btn">Solicitar más información <i class="fa fa-chevron-right"></i></a></div>
                 <div class="categories-listing">
                   <div class="tags-array cf">
                     <h3>Categorías:</h3>
@@ -133,6 +133,27 @@
               </div>
             </div>
           </div>
+        </div>
+        <div id="alert-contact" class="lb">
+          <form action="#">
+            <h2><i class='fa fa-envelope-square'></i> Solicitar más información.</h2>
+            <fieldset class="subject">
+              <label>Estás solicitando más información sobre: </label>
+              <p>Congreso de la industria textil 2014.</p>
+            </fieldset>
+            <fieldset class="message">
+              <label>Describe lo que te gustaría saber:</label>
+              <textarea></textarea>
+            </fieldset>
+            <div class="action">
+              <div class="half">
+                <div class="left"><br></div>
+                <div class="right">
+                  <button type="submit" class="btn">Enviar <i class="fa fa-chevron-right"></i></button>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
       </section>
       <aside class="main-notification">
