--- a/front/src/main/webapp/ic.html
+++ b/front/src/main/webapp/ic.html
@@ -46,7 +46,7 @@
             <div class="col">
               <div class="item prov">
                 <header>
-                  <h3>163</h3><span>UE proveedores</span>
+                  <h3>163</h3><span>proveedores</span>
                 </header>
                 <dl>
                   <dt>Top 3</dt>
@@ -63,7 +63,7 @@
             <div class="col">
               <div class="item comp">
                 <header>
-                  <h3>232</h3><span>UE competidoras</span>
+                  <h3>232</h3><span>competidores</span>
                 </header>
                 <dl>
                   <dt>Top 3</dt>
@@ -80,7 +80,7 @@
             <div class="col">
               <div class="item dist">
                 <header>
-                  <h3>2991</h3><span>UE distribuidoras</span>
+                  <h3>2991</h3><span>distribuidores</span>
                 </header>
                 <dl>
                   <dt>Top 3</dt>
