--- a/front/src/main/webapp/dashboard.html
+++ b/front/src/main/webapp/dashboard.html
@@ -83,66 +83,12 @@
               <ul>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/1.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Competencia desleal genera pérdidas de 60% a industria textil</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
                       <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-              </ul>
-              <footer class="action"><a href="news.html" class="link">Ver más<i class="fa fa-arrow-right"></i></a></footer>
-            </div>
-            <div class="widget widget-news">
-              <h2><br></h2>
-              <ul>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -154,7 +100,19 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -166,18 +124,6 @@
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
-                      <li class="date">10-Feb-2014</li>
-                    </ul>
-                  </footer>
-                </li>
-                <li class="element">
-                  <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/4.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Empresas Hidalguenses exportaron mil 510 millones de dólares en 2012</a></div>
-                  </div>
-                  <footer class="info cf">
-                    <ul>
                       <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
@@ -189,6 +135,18 @@
             <div class="widget widget-news">
               <h2><br></h2>
               <ul>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
                 <li class="element">
                   <div class="content cf">
                     <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
@@ -203,12 +161,12 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>milenio.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
@@ -217,6 +175,36 @@
                   <div class="content cf">
                     <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
                     <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eluniversal.com.mx</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+              </ul>
+              <footer class="action"><a href="news.html" class="link">Ver más<i class="fa fa-arrow-right"></i></a></footer>
+            </div>
+            <div class="widget widget-news">
+              <h2><br></h2>
+              <ul>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/5.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Universidades, respuesta a necesidades regionales</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
@@ -227,12 +215,24 @@
                 </li>
                 <li class="element">
                   <div class="content cf">
-                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/6.jpg"/></a></div>
-                    <div class="title"><a href="view-new.html">Inversión se concentra en Pachuca, Zempoala y Tula</a></div>
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/2.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Tepeji del Río, potencia textilera</a></div>
                   </div>
                   <footer class="info cf">
                     <ul>
-                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>elfinanciero.com</span></a></li>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>terra.com</span></a></li>
+                      <li class="date">10-Feb-2014</li>
+                    </ul>
+                  </footer>
+                </li>
+                <li class="element">
+                  <div class="content cf">
+                    <div class="pic"><a href="view-new.html"><img src="img/news-thumbs/3.jpg"/></a></div>
+                    <div class="title"><a href="view-new.html">Repartirá Concurso Artesanal Textil 215 mil pesos en premios</a></div>
+                  </div>
+                  <footer class="info cf">
+                    <ul>
+                      <li class="source"><a href="#"><i class="fa fa-rss"></i><span>eleconomista.com</span></a></li>
                       <li class="date">10-Feb-2014</li>
                     </ul>
                   </footer>
