--- a/front/src/main/webapp/loginqr.html
+++ b/front/src/main/webapp/loginqr.html
@@ -22,13 +22,8 @@
       <h1>aie</h1>
       <h2>Sistema de Inteligencia y Tecnología Empresarial</h2>
     </div>
-    <div class="login-select">
-      <div class="title">
-        <h3>Bienvenido</h3>
-      </div>
-      <div class="qr-container">
-        <div id="altContent"></div>
-      </div>
+    <div class="login-form">
+      <div id="altContent"></div>
     </div>
     <script src="js/qr/swfobject.js"></script>
     <script>
@@ -48,7 +43,7 @@
       };
       swfobject.embedSWF(
        "js/qr/QR.swf", 
-       "altContent", 272, 272, "10.0.0", 
+       "altContent", 300, 180, "10.0.0", 
        "expressInstall.swf", 
        flashvars, 
        params, 
@@ -58,11 +53,11 @@
       function actQR( msg ){
        // msg comes null if no code were detected
        if( msg === null ){ //expect a lot of nulls
-        // console.log("no QR were read at this time")
+        console.log("no QR were read at this time")
        } else {
         // a valid QR reading, do something with it
-        // console.log(msg)
-        window.location.href="/dashboard.html";
+        console.log(msg)
+        window.location.href="/news.html";
         // ask flash to stop parsing, this saves processing as webcam reading stop
         QR.stop()
        }
