Fix a links para previsualizar noticias en news, fix visualizar imagenes

--- a/front/src/main/webapp/news-tweets.html
+++ b/front/src/main/webapp/news-tweets.html
@@ -100,7 +100,7 @@
                 </header>
                 <footer class="cf">
                   <div class="source"><a href="{{ tweet.userProfileUrl }}"><i class="fa fa-twitter"></i><span>@{{ tweet.userScreenName }}</span></a></div>
-                  <div class="source-link"><a href="{{ tweet.url }}" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
+                  <div class="source-link"><a href="{{ tweet.url }}" target="_blank" class="link">Ver tweet<i class="fa fa-arrow-right"></i></a></div>
                 </footer>
               </li>
             </ul>
