--- a/front/src/main/webapp/news.html
+++ b/front/src/main/webapp/news.html
@@ -115,8 +115,8 @@
             <ul>
               <li ng-repeat="new in newsresult" class="element">
                 <header class="cf">
-                  <div ng-hide="!new.imagen" class="pic"><a href="{{ new.url }}"><img src="img/news-thumbs/3.jpg"></a></div>
-                  <div class="title"><a href="{{ new.url }}">{{ new.titulo }}</a></div>
+                  <div ng-hide="!new.imagen" class="pic"><a ng-click="muestra(new.url)" href="#"><img src="{{ new.imagen }}"></a></div>
+                  <div class="title"><a ng-click="muestra(new.url)" href="#">{{ new.titulo }}</a></div>
                 </header>
                 <div class="content">
                   <p>{{ new.descripcion }}</p>
@@ -140,8 +140,8 @@
             <ul>
               <li ng-repeat="new in newsa" class="element">
                 <header class="cf">
-                  <div ng-hide="!new.imagen" class="pic"><a href="{{ new.url }}"><img src="img/news-thumbs/3.jpg"></a></div>
-                  <div class="title"><a href="{{ new.url }}">{{ new.titulo }}</a></div>
+                  <div ng-hide="!new.imagen" class="pic"><a ng-click="muestra(new.url)" href="#"><img src="{{ new.imagen }}"></a></div>
+                  <div class="title"><a ng-click="muestra(new.url)" href="#">{{ new.titulo }}</a></div>
                 </header>
                 <div class="content">
                   <p>{{ new.descripcion }}</p>
@@ -165,8 +165,8 @@
             <ul>
               <li ng-repeat="new in newsb" class="element">
                 <header class="cf">
-                  <div ng-hide="!new.imagen" class="pic"><a href="{{ new.url }}"><img src="img/news-thumbs/2.jpg"></a></div>
-                  <div class="title"><a href="{{ new.url }}">{{ new.titulo }}</a></div>
+                  <div ng-hide="!new.imagen" class="pic"><a ng-click="muestra(new.url)" href="#"><img src="{{ new.imagen }}"></a></div>
+                  <div class="title"><a ng-click="muestra(new.url)" href="#">{{ new.titulo }}</a></div>
                 </header>
                 <div class="content">
                   <p>{{ new.descripcion }}</p>
@@ -186,12 +186,12 @@
         </div>
         <div class="panel-news-listing">
           <div class="container">
-            <h2 class="date"><i class='fa fa-calendar'></i><span>Anteriores</span></h2>
+            <h2 class="date"><i class='fa fa-calendar'></i><span>Noticias pasadas:</span></h2>
             <ul>
               <li ng-repeat="new in newsc" class="element">
                 <header class="cf">
-                  <div ng-hide="!new.imagen" class="pic"><a href="{{ new.url }}"><img src="{{ new.imagen }}"></a></div>
-                  <div class="title"><a href="{{ new.url }}">{{ new.titulo }}</a></div>
+                  <div ng-hide="!new.imagen" class="pic"><a ng-click="muestra(new.url)" href="#"><img src="{{ new.imagen }}"></a></div>
+                  <div class="title"><a ng-click="muestra(new.url)" href="#">{{ new.titulo }}</a></div>
                 </header>
                 <div class="content">
                   <p>{{ new.descripcion }}</p>
@@ -211,26 +211,16 @@
         </div>
       </section>
       <aside class="main-notification">
-        <dl>
-          <dt>Notification 1</dt>
-          <dd>Et mollis nunc diam eget sapien. Nulla facilisi. Etiam feugiat imperdiet rhoncus.</dd>
-        </dl>
-        <dl>
-          <dt>Notification 2</dt>
-          <dd>Et mollis nunc diam eget sapien. Nulla facilisi. Etiam feugiat imperdiet rhoncus.</dd>
-        </dl>
-        <dl>
-          <dt>Notification 3</dt>
-          <dd>Et mollis nunc diam eget sapien. Nulla facilisi. Etiam feugiat imperdiet rhoncus.</dd>
-        </dl>
-        <dl>
-          <dt>Notification 4</dt>
-          <dd>Et mollis nunc diam eget sapien. Nulla facilisi. Etiam feugiat imperdiet rhoncus.</dd>
-        </dl>
-        <dl>
-          <dt>Notification 5</dt>
-          <dd>Et mollis nunc diam eget sapien. Nulla facilisi. Etiam feugiat imperdiet rhoncus.</dd>
-        </dl>
+        <div class="action"><a href="alerts.html" class="btn-outline">Ver todas <i class='fa fa-chevron-right'></i></a></div>
+        <div class="alert-listing-aside">
+          <ul>
+            <li class="selected"><a href="alerts.html">Se espera un incremento del 5% en los costos de manufactura en la región.</a></li>
+            <li class="new"><a href="alerts-view.html">Congreso de la industria textil 2014.</a></li>
+            <li class="new"><a href="alerts.html">Propuesta de nueva ley en materia de comercio exterior podría beneficiar al sector textil en el norte</a></li>
+            <li><a href="alerts.html">Taller gratuito de tecnologías de la información para PyMES.</a></li>
+            <li><a href="alerts.html">La importancia de tener un sitio web para la promoción de tus servicios a nivel global.</a></li>
+          </ul>
+        </div>
       </aside>
     </div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
