modulo vocaciones/servicios unidad_economica

--- a/front/src/main/webapp/login-qr.html
+++ b/front/src/main/webapp/login-qr.html
@@ -30,6 +30,7 @@
         <div id="altContent"></div>
       </div>
     </div>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="js/qr/swfobject.js"></script>
     <script src="js/qr/qrctrl.js"></script>
   </body>
